# TestErrorOnLibrary

./: CMakeLists.txt  README.md
examples/: Main.cpp  processmatinlibrary_pub.h
hpp/: processmatinlibrary.h
src/: processmatinlibrary.cpp
